<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.ipb-halle.msbi</groupId>
    <artifactId>MassBank-lib</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <versionName>${project.version}</versionName>
        <timestamp>2025-04-28T10:48:05+02:00</timestamp>
        <cdk-version>2.11</cdk-version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.12.4</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.12.4</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.13.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.18.0</version>
        </dependency>

<!--        <dependency>-->
<!--            <groupId>org.openscience.cdk</groupId>-->
<!--            <artifactId>cdk-data</artifactId>-->
<!--            <version>${cdk-version}</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>org.openscience.cdk</groupId>-->
<!--            <artifactId>cdk-depict</artifactId>-->
<!--            <version>${cdk-version}</version>-->
<!--        </dependency>-->
        <dependency>
            <groupId>org.openscience.cdk</groupId>
            <artifactId>cdk-inchi</artifactId>
            <version>${cdk-version}</version>
        </dependency>
        <dependency>
            <groupId>org.openscience.cdk</groupId>
            <artifactId>cdk-formula</artifactId>
            <version>${cdk-version}</version>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>org.openscience.cdk</groupId>-->
<!--            <artifactId>cdk-interfaces</artifactId>-->
<!--            <version>${cdk-version}</version>-->
<!--        </dependency>-->
        <dependency>
            <groupId>org.openscience.cdk</groupId>
            <artifactId>cdk-smiles</artifactId>
            <version>${cdk-version}</version>
        </dependency>
        <dependency>
            <groupId>org.openscience.cdk</groupId>
            <artifactId>cdk-silent</artifactId>
            <version>${cdk-version}</version>
        </dependency>
        <dependency>
            <groupId>com.github.petitparser.java-petitparser</groupId>
            <artifactId>petitparser-core</artifactId>
            <version>main-426086de4c-1</version>
        </dependency>
        <dependency>
            <groupId>com.github.meier-rene.spectra-hash</groupId>
            <artifactId>core</artifactId>
            <version>51f5a0ae23</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.11.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-runner</artifactId>
            <version>1.1.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>
</project>